# osp

./: .gitignore  CITATION.cff  Cargo.toml  README.md  SECURITY.md  SoftwarePhysics.txt  osp-vision.example.toml  rust-toolchain.toml  temp
.github/workflows/: ci.yml  refresh-trybuild-snapshots.yml
crates/osp-analyzer/: Cargo.toml
crates/osp-analyzer/examples/: g2c_corpus_matrix.rs  role_diagnostic.rs  scip_dump.rs  scip_semantic_dump.rs  timing_bench.rs  token_benchmark.rs  vision_breakdown.rs  witness_breakdown.rs
crates/osp-analyzer/src/: abstractness.rs  contract.rs  language.rs  lib.rs  pipeline.rs  witness.rs
crates/osp-analyzer/src/adapters/: go.rs  javascript.rs  mod.rs  python.rs  rust.rs  shared.rs  typescript.rs
crates/osp-analyzer/src/scip/: index.rs  lcom4.rs  loader.rs  mod.rs
crates/osp-analyzer/tests/: cli_smoke.rs
crates/osp-cli/: Cargo.toml
crates/osp-cli/src/: analysis_bridge.rs  canonical_identity.rs  errors.rs  evidence_projection.rs  graph_seed_builder.rs  identity_bridge.rs  main.rs  metric_projection.rs  mock_llm.rs  review_session.rs  seed_file.rs  store_io.rs
crates/osp-cli/src/application/: mod.rs  repository.rs  review.rs
crates/osp-cli/src/commands/: graph.rs  mod.rs  resolve_code_entity_preview_render.rs  review.rs  supersede_preview_render.rs
crates/osp-cli/tests/: analyze_bridge_flow.rs  architecture_guards.rs  preview_flow.rs  resolution_flow.rs  review_flow.rs  supersede_flow.rs
crates/osp-core/: Cargo.toml
crates/osp-core/src/: agent.rs  authorization.rs  axes.rs  bigbang.rs  canonical_encoding.rs  canonical_tags.rs  coords.rs  engine.rs  lib.rs  measurement.rs  navigator.rs  persistence.rs  rule.rs  space.rs  task_bridge.rs  time.rs  trajectory.rs  vision.rs  vision_config.rs  witness.rs
crates/osp-core/src/anchoring/: classifier.rs  code_evidence.rs  edit_distance.rs  extractor.rs  gate.rs  identity.rs  mod.rs  pipeline.rs  predicate_lowering.rs  resolved_implementation.rs  review.rs  scorer.rs  store.rs  typed_ref.rs  types.rs
crates/osp-core/src/authorization/: gate_v2.rs
crates/osp-core/tests/: anchoring_fixtures.rs  anchoring_mvp.rs  anchoring_typelevel.rs  engine_measurement_single_producer.rs  faz5_e2e.rs  integration.rs  measurement_binding_typelevel.rs  paper3_evidence.rs  paper3_heldout.rs  resolution_api_evidence_isolation_guard.rs
crates/osp-core/tests/compile_fail/: c12_presented_basis_deserialize.rs  c12_presented_basis_deserialize.stderr  c12_presented_basis_literal.rs  c12_presented_basis_literal.stderr  c13_decision_application_deserialize.rs  c13_decision_application_deserialize.stderr  c13_decision_application_literal.rs  c13_decision_application_literal.stderr  c16_resolution_application_deserialize.stderr  c16_resolution_application_literal.rs  c16_resolution_application_literal.stderr  c2_family_incompatible.rs  c2_family_incompatible.stderr  c3_conceptgraph_deserialize.rs  c3_conceptgraph_deserialize.stderr  c3_graph_private.rs  c3_graph_private.stderr  c3_operator_acceptance_construct.rs  c3_operator_acceptance_construct.stderr  c4_supersede_authority_construct.rs  c4_supersede_authority_construct.stderr  c6_intent_cannot_form_observed_code_evidence.rs  c6_intent_cannot_form_observed_code_evidence.stderr  c6_intent_carries_physical_vector.rs  c6_intent_carries_physical_vector.stderr  c6_observed_evidence_deserialize.rs  c6_observed_evidence_deserialize.stderr  c6_observed_evidence_literal.rs  c6_observed_evidence_literal.stderr  c6_observed_physical_metrics_deserialize.rs  c6_observed_physical_metrics_deserialize.stderr  c6_observed_physical_metrics_literal.rs  c6_observed_physical_metrics_literal.stderr  c8_anchorplan_deserialize.rs  c8_anchorplan_deserialize.stderr  c8_anchorplan_literal.rs  c8_anchorplan_literal.stderr  cP1_predicate_stub_deserialize.rs  cP1_predicate_stub_deserialize.stderr  cP1_predicate_stub_literal.rs  (+16 more)
crates/osp-core/tests/fixtures/: authorization_basis_v2_wire.json
crates/osp-core/tests/fixtures/anchoring/: fix_011_implemented_by_with_evidence.json  fix_012_task_candidate_derivation.json  fix_013_rule_to_predicate_stub.json
crates/osp-desktop/: Cargo.toml  tauri.conf.json
crates/osp-desktop/examples/: http_server_only.rs  witness_inspect.rs
crates/osp-desktop/frontend/: index.html
crates/osp-desktop/src/: lib.rs  main.rs
crates/osp-llm-runtime/: Cargo.toml
crates/osp-llm-runtime/examples/: token_bench.rs
crates/osp-llm-runtime/src/: adapter.rs  error.rs  lib.rs  prompt.rs  response.rs  runtime.rs
crates/osp-mcp/: Cargo.toml  README.md
crates/osp-mcp/src/: envelope.rs  lib.rs  main.rs  mode.rs  server.rs  workspace.rs
crates/osp-mcp/tests/: inv_c11_agent_surface.rs  inv_t1_leak_test.rs
crates/osp-spike/: Cargo.toml
crates/osp-spike/src/: bridge.rs  graph.rs  main.rs  metrics.rs  model.rs  report.rs  witness.rs
docs/: README.md  STATUS.md  agent-prompt-semantics.md  agent-trajectory-roadmap.md  concept-anchoring-design.md  corpus28-results.md  csharp-support-plan.md  implementation-invariants.md  inv-t9-70-commit2-handoff.md  inv-t9-70-commit3-final-handoff.md  inv-t9-70-commit3-handoff.md  inv-t9-70-commit4a-kickoff.md  inv-t9-70-commit4a-plan.md  inv-t9-70-commit4b-faz3-kickoff.md  inv-t9-70-commit4b-faz3-plan.md  inv-t9-70-commit4b-faz4-kickoff.md  inv-t9-70-commit4b-faz4-plan.md  inv-t9-70-implementation-plan.md  inv-t9-70-pr69-body-update.md  inv-t9-commit1-amend-tur2-handoff.md  inv-t9-merge-blockers-handoff.md  inv-t9-step4b-plan.md  invariant-spec.md  mcp-design.md  multi-agent-coordination.md  osp-core-design.md  paper-draft-v2.5-edited.md  paper-draft-v2.6.md  paper-draft.md  paper2-draft-v1.md  paper3-draft-v1.md  roadmap.md  scale-bench-v3.md  scip-analyzer-design.md  session-handoff.md  space-engine-design.md  usage-dogfooding.md  usage-llm-benchmark.json
docs/archive/: HANDOFF-G2c5-and-beyond.md  spike-results-v2.md  spike-results-v3.md
scripts/: clone-corpus.ps1  md_to_latex.py  run-corpus.ps1  validate_paper3_v14_dist.py  verify_invariant_evidence.py
viz/: pipeline-figure.html  space-browser.html
(+54 files in other folders)
