[workspace]
resolver = "2"
members = [
    "crates/osp-spike",
    "crates/osp-core",
    "crates/osp-analyzer",
    "crates/osp-llm-runtime",
    "crates/osp-desktop",
    "crates/osp-cli",
    "crates/osp-mcp",
]

# Gelecek Fazlar:
#   "crates/osp-viz"        (Faz 6: WASM görselleştirme)

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
license = "Apache-2.0"
authors = ["OSP Authors"]
repository = "https://github.com/ontologicalspace/osp"
homepage = "https://ontologicalspace.org"
description = "Ontological Space Protocol — software as a conceptual space"

[workspace.dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
# INV-T9 #70 Commit 4b Faz 4 Commit 1b: raw_value feature — RawValue ile duplicate-key
# koruması (strict wire dispatch). authorization basis wire format JSON-specific.
serde_json = { version = "1", features = ["raw_value"] }
# INV-T9 #70 Commit 4b Faz 4: V2 digest wire format (64 lowercase hex). authorization
# basis digest hex encode/decode — evidence integrity.
hex = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
# CLI osp review — kalıcı store snapshot atomic persistence (fs2 bakımsız fork).
fs4 = "0.12"

[profile.release]
debug = true   # profile-driven optimizasyon için semboller kalsın (Faz 3 scale test)
