[package]
name = "osp-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true

[[bin]]
name = "osp"
path = "src/main.rs"

[dependencies]
osp-core = { path = "../osp-core" }
osp-analyzer = { path = "../osp-analyzer" }
osp-llm-runtime = { path = "../osp-llm-runtime" }
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
clap = { version = "4", features = ["derive"] }
# CLI osp review — kalıcı store snapshot atomic persistence.
# fs4: OS-level advisory file locking (Linux flock / Windows LockFileEx), process
# ölünce lock otomatik bırakılır (stale-lock state yok). fs2 bakımsız; fs4 maintained fork.
fs4 = { workspace = true }
thiserror = "1"

[dev-dependencies]
tempfile = "3"
assert_cmd = "2"
predicates = "3"
