[package]
name = "osp-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Ontological Space Protocol — core types (Node/Edge/Space, coordinate system)"

[dependencies]
thiserror = "1"                # CommitError, DeviationError (library-level typed errors)
serde = { workspace = true }   # Serialize/Deserialize — Faz 2 persistence (workspace derive feature inherited)
serde_json = { workspace = true } # INV-T9: authorization basis canonical encoding (digest) + Commit 1b wire dispatch (raw_value)
bincode = "1"                  # Binary snapshot serialization — Faz 2 event-sourcing
toml = "0.8"                   # Vision config parsing — Faz 2 vision_config
tracing = { workspace = true } # Faz 2.5 persistence logging
unicode-normalization = "0.1"  # Faz 5.1: normalize_for_axis_match gerçek NFC (decomposed → precomposed)
# INV-T9: authorization basis digest — cryptographic, collision-resistant, domain-separated.
# evidence integrity için FNV-1a yetersiz; BLAKE3 hızlı + güvenli.
blake3 = "1"
# INV-T9 #70 Commit 4b Faz 4: V2 digest wire format (64 lowercase hex). authorization
# basis digest hex encode/decode — evidence integrity. workspace raw_value feature inherited.
hex = { workspace = true }
# INV-T9: PersistedSpaceViewId için operating-system CSPRNG. Transitive (tempfile) yoluyla
# zaten 0.4.3 mevcut; runtime sözleşmesi olarak doğrudan bağlanır. Fail-closed — fallback yok.
getrandom = "0.4.3"

# INV-T9: parent-directory fsync (crash consistency) — Unix-only.
[target.'cfg(unix)'.dependencies]
libc = "0.2"
# Faz 1.5: git2 = "0.18" (lokal God-mode witness — inv #8: osp-core DEĞİL, osp-analyzer)

[dev-dependencies]
tempfile = "3"           # Faz 2.5 persistence test'leri için temp directory
serde_json = { workspace = true }  # Intent invariant test (serde roundtrip)
trybuild = "1"           # Faz 2 compile-fail testler (INV type-level garantiler)
# EI3-a architecture guard: AST-tabanlı resolution API surface tarama (struct fields,
# trait method imzaları, impl accessor'ları). String-scan'in eksiklerini kapatır.
syn = { version = "2", features = ["full", "parsing", "visit"] }
quote = "1"             # ToTokens trait (syn Type → TokenStream string)
