[package]
name = "osp-desktop"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
description = "OSP Desktop — conceptual space visualization (HTTP server + Tauri-ready)"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
osp-core = { path = "../osp-core" }
osp-analyzer = { path = "../osp-analyzer" }
serde = { workspace = true }
serde_json = { workspace = true }
tiny_http = "0.12"
tauri = { version = "2", features = [] }

[[bin]]
name = "osp-desktop"
path = "src/main.rs"
