[package]
name = "osp-llm-runtime"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "OSP LLM runtime — OspPrompt to DeltaProposal via OpenAI-compatible chat completion API"

[dependencies]
osp-core = { path = "../osp-core" }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
anyhow = { workspace = true }
tokio = { workspace = true }
tracing-subscriber = { workspace = true }

[[example]]
name = "token_bench"
path = "examples/token_bench.rs"
